testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_right_bracket/case3.expect.out
error: expected '}', found '4'
  ==> case3.cj:14:22:
   | 
14 |     "cangjie \u{1234567645"
   |                ~        ^ expected '}'
   |                |
   |                to match this opening '{'
   | 
   # note: unicode escape may contain 8 hexadecimal digits at most

1 error generated, 1 error printed.
